Changed file path for pages

--- a/education.html
+++ b/education.html
@@ -42,8 +42,8 @@
       <ul class="flex">
         <li><a href="index.html">Home</a></li>
         <li>FESC Facilities</li>
-        <li><a href="page2.html">Education</a></li>
-        <li><a href="page1.html">Energy Industry</a></li>
+        <li><a href="education.html">Education</a></li>
+        <li><a href="industry.html">Energy Industry</a></li>
       </ul>
     </div>
   </header>
@@ -82,14 +82,19 @@
     </div>
   </aside>
   
+  <section>
+    <form name="email" onsubmit="address()">
+      <label>
+        <input type="text" name="eMail">
+      </label>
+        <input type="submit">
+    </form>
+  </section>
+  
 <!--  Bottom nav-->
   <footer class="bottom-nav">
-    <ul>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-    </ul>
+    <a href="#"><h4>Contact</h4></a>
+    <a href="#"><h4>Site Map</h4></a>
   </footer>
   
   <a class="twitter-share-button"
