--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
       <ul class="flex">
         <li>Home</li>
         <li>FESC Facilities</li>
-        <li><a href="page2.html">Education</a></li>
-        <li><a href="page1.html">Energy Industry</a></li>
+        <li><a href="education.html">Education</a></li>
+        <li><a href="industry.html">Energy Industry</a></li>
       </ul>
     </div>
   </header>
@@ -90,25 +90,21 @@ the Nation and the World</h1>
   </aside>
   
   <section>
-    <h3></h3>
+    <form name="email" onsubmit="address()">
+      <label>
+        <input type="text" name="eMail">
+      </label>
+        <input type="submit">
+    </form>
   </section>
   
 <!--  Bottom nav -->
   <footer class="bottom-nav">
-    <ul>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-    </ul>
-  
+    <a href="#"><h4>Contact</h4></a>
+    <a href="#"><h4>Site Map</h4></a>
   </footer>
-  <form name="email" onsubmit="address()">
-    <label>
-      <input type="text" name="eMail">
-    </label>
-      <input type="submit">
-  </form>
+  
+  
   
   <a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=Check%20out%20this%20page%20https%3A%2F%2Fgeorodent.github.io%2Fsocial-media%2F">Tweet</a>  
 </body>
