--- a/index.html
+++ b/index.html
@@ -33,35 +33,30 @@
 
   return t;
   }(document, "script", "twitter-wjs"));</script>
-  <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
+  <link href="https://fonts.googleapis.com/css?family=Anton|Source+Serif+Pro" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="styles/new-styles.css">
 </head>
   
 <body>
-<!--  Experimenting with header-->
-<!--  <img src="images/header.jpg">-->
-<!--  <h1>FLORIDA ENERGY SYSTEMS CONSORTIUM</h1>-->
-<!--  Install background image in header-->
+
+  
   <header>
-    <div class="main-nav">
-      <ul class="flex">
-        <li>Home</li>
-        <li>FESC Facilities</li>
-        <li><a href="education.html">Education</a></li>
-        <li><a href="industry.html">Energy Industry</a></li>
+    <div class="flexcontainer">
+      <img src="images/header.jpg" alt="FESC logo">
+      <h1>FESC</h1>
+      <ul>
+        <li class="home">Home</li>
+        <li class="facility">FESC Facilities</li>
+        <li class="education"><a href="education.html">Education</a></li>
+        <li class="industry"><a href="industry.html">Energy Industry</a></li>
       </ul>
     </div>
-  </header>
-  
-  <!--  Install img src and fill in attributes-->
-  <figure>
-    <img src="#" alt="" title="">
-    <figcaption></figcaption>
-  </figure>
-  
+  </header> 
+ 
 <!--  Main info content-->
   <article class="article">
     <h1>FESC Bringing Energy Solutions to Florida,
-the Nation and the World</h1>
+the Nation, and the World!</h1>
     
 <!--    rewrite paragraph  -->
     <p>The Florida Energy Systems Consortium (FESC) was created by the Florida State government to promote collaboration among the energy experts at its 12 supported universities to share energy-related expertise. The consortium assists the state in the development and implementation of an environmentally compatible, sustainable, and efficient energy strategic plan. The Consortium was charged to ‘perform research and development on innovative energy systems that lead to alternative energy strategies, improved energy efficiencies, and expanded economic development for the state‘. The legislature appropriated funding for research at five of the universities as well as support for education, outreach, and technology commercialization. The Consortium reports to and provides guidance on an as needed basis to the Florida Legislature, Executive Office of the Governor, and the Florida’s Office of Energy housed in the Florida Department of Agriculture and Consumer Services.</p>
@@ -79,7 +74,7 @@ the Nation and the World</h1>
 <!--  Side nav bar-->
   <aside class="side-nav">
     <div class="dropdown">
-      <button class="dropbtn">More Nav</button>
+      <button class="dropbtn">Sub Menu</button>
         <div class="dropdown-content">
           <a href="#">About us</a>
           <a href="#">Florida Energy Facts</a>
@@ -87,25 +82,20 @@ the Nation and the World</h1>
           <a href="#">LINKS</a>
         </div>
     </div>
+<!--   Install image here  -->
   </aside>
   
   <section>
     <form name="email" onsubmit="address()">
-      <label>
+      <label>Please input your email.
         <input type="text" name="eMail">
       </label>
         <input type="submit">
     </form>
-  </section>
-  
-<!--  Bottom nav -->
-  <footer class="bottom-nav">
     <a href="#"><h4>Contact</h4></a>
     <a href="#"><h4>Site Map</h4></a>
-  </footer>
-  
-  
-  
+  </section>
+    
   <a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=Check%20out%20this%20page%20https%3A%2F%2Fgeorodent.github.io%2Fsocial-media%2F">Tweet</a>  
 </body>
 </html>
