Most styles installed, assignment to submit

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   
 <body>
 
-  
+<!--  Working on an image for background of main nav-->
   <header>
     <div class="flexcontainer">
       <img src="images/header.jpg" alt="FESC logo">
@@ -82,7 +82,8 @@ the Nation, and the World!</h1>
           <a href="#">LINKS</a>
         </div>
     </div>
-<!--   Install image here  -->
+<!--  Possibly install image here  -->
+    
   </aside>
   
   <section>
