Checking other devices

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <header>
     <div class="flexcontainer">
       <img src="images/header.jpg" alt="FESC logo">
-      <h1>FESC</h1>
+      <h1 id="logo-fesc">FESC</h1>
       <ul>
         <li class="home">Home</li>
         <li class="facility">FESC Facilities</li>
@@ -51,6 +51,7 @@
         <li class="industry"><a href="industry.html">Energy Industry</a></li>
       </ul>
     </div>
+    <h4 class="florida">FLORIDA ENERGY SYSTEMS CONSORTIUM</h4>
   </header> 
  
 <!--  Main info content-->
@@ -96,7 +97,8 @@ the Nation, and the World!</h1>
     <a href="#"><h4>Contact</h4></a>
     <a href="#"><h4>Site Map</h4></a>
   </section>
-    
-  <a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=Check%20out%20this%20page%20https%3A%2F%2Fgeorodent.github.io%2Fsocial-media%2F">Tweet</a>  
+  <div class="share">
+  <a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=Check%20out%20this%20page%20https%3A%2F%2Fgeorodent.github.io%2Fsocial-media%2F">Tweet</a> 
+  </div>  
 </body>
 </html>
