New JS added, and more styling

--- a/index.html
+++ b/index.html
@@ -33,13 +33,12 @@
 
   return t;
   }(document, "script", "twitter-wjs"));</script>
+  <script src="java.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Anton|Source+Serif+Pro" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="styles/new-styles.css">
 </head>
   
 <body>
-
-<!--  Working on an image for background of main nav-->
   <header>
     <div class="flexcontainer">
       <img src="images/header.jpg" alt="FESC logo">
@@ -83,8 +82,6 @@ the Nation, and the World!</h1>
           <a href="#">LINKS</a>
         </div>
     </div>
-<!--  Possibly install image here  -->
-    
   </aside>
   
   <section>
@@ -97,8 +94,10 @@ the Nation, and the World!</h1>
     <a href="#"><h4>Contact</h4></a>
     <a href="#"><h4>Site Map</h4></a>
   </section>
+  
   <div class="share">
   <a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=Check%20out%20this%20page%20https%3A%2F%2Fgeorodent.github.io%2Fsocial-media%2F">Tweet</a> 
   </div>  
 </body>
+  
 </html>
