--- a/education.html
+++ b/education.html
@@ -33,6 +33,8 @@
 
   return t;
   }(document, "script", "twitter-wjs"));</script>
+  
+  <script src="java.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Anton|Source+Serif+Pro" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="styles/new-styles.css">  
 </head>
@@ -41,7 +43,7 @@
   <header>
     <div class="flexcontainer">
       <img src="images/header.jpg" alt="FESC logo">
-      <h1>FESC</h1>
+      <h1 id="logo-fesc">FESC</h1>
       <ul>
         <li class="home"><a href="index.html">Home</a></li>
         <li class="facility">FESC Facilities</li>
@@ -49,6 +51,7 @@
         <li class="industry"><a href="industry.html">Energy Industry</a></li>
       </ul>
     </div>
+    <h4 class="florida">FLORIDA ENERGY SYSTEMS CONSORTIUM</h4>
   </header> 
   
   <article class="article">
@@ -95,10 +98,9 @@
     <a href="#"><h4>Contact</h4></a>
     <a href="#"><h4>Site Map</h4></a>
   </section>
-  
-  <a class="twitter-share-button"
-  href="https://twitter.com/intent/tweet?text=Check%20out%20this%20page%20https%3A%2F%2Fgeorodent.github.io%2Fsocial-media%2F">
-  Tweet</a> 
-  
+  <div class="share">
+    <a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=Check%20out%20this%20page%20https%3A%2F%2Fgeorodent.github.io%2Fsocial-media%2F">
+    Tweet</a> 
+  </div>
 </body>
 </html>
