Finished 90% of responsiveness. Need to fix side menu

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
       <img src="images/header.jpg" alt="FESC logo">
       <h1 id="logo-fesc">FESC</h1>
       <ul>
-        <li class="home">Home</li>
-        <li class="facility">FESC Facilities</li>
+        <li class="home"><a href="#">Home</a></li>
+        <li class="facility"><a href="#">FESC Facilities</a></li>
         <li class="education"><a href="education.html">Education</a></li>
         <li class="industry"><a href="industry.html">Energy Industry</a></li>
       </ul>
@@ -74,7 +74,7 @@ the Nation, and the World!</h1>
 <!--  Side nav bar-->
   <aside class="side-nav">
     <div class="dropdown">
-      <button class="dropbtn">Sub Menu</button>
+      <button class="dropbtn">MENU</button>
         <div class="dropdown-content">
           <a href="#">About us</a>
           <a href="#">Florida Energy Facts</a>
