--- a/education.html
+++ b/education.html
@@ -46,7 +46,7 @@
       <h1 id="logo-fesc">FESC</h1>
       <ul>
         <li class="home"><a href="index.html">Home</a></li>
-        <li class="facility">FESC Facilities</li>
+        <li class="facility"><a href="#">FESC Facilities</a></li>
         <li class="education"><a href="education.html">Education</a></li>
         <li class="industry"><a href="industry.html">Energy Industry</a></li>
       </ul>
@@ -78,7 +78,7 @@
 <!--  Side drop down nav-->
   <aside class="side-nav">
     <div class="dropdown">
-      <button class="dropbtn">Sub Menu</button>
+      <button class="dropbtn">MENU</button>
         <div class="dropdown-content">
           <a href="#">About us</a>
           <a href="#">Florida Energy Facts</a>
