--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@ the Nation, and the World!</h1>
       </label>
         <input type="submit">
     </form>
-    <a href="#"><h4>Contact</h4></a>
-    <a href="#"><h4>Site Map</h4></a>
+    <a href="#"><h4>CONTACT</h4></a>
+    <a href="#"><h4>SITE MAP</h4></a>
   </section>
   
   <div class="share">
