--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <h1 id="logo-fesc">FESC</h1>
       <ul>
         <li class="home"><a href="#">Home</a></li>
-        <li class="facility"><a href="#">FESC Facilities</a></li>
+        <li class="facility"><a href="chart.html">Energy Charts</a></li>
         <li class="education"><a href="education.html">Education</a></li>
         <li class="industry"><a href="industry.html">Energy Industry</a></li>
       </ul>
