Chart readme added, and options for charts

--- a/chart.html
+++ b/chart.html
@@ -2,11 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  
   <title>Florida Energy</title>
+  
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   <script type="text/javascript">
       google.charts.load('current', {'packages':['corechart']});
   </script>
+  <script src="java.js"></script>
+  
   <meta name="viewport"
   content="width=device-width, initial-scale=1">
   <meta property="og:title" content="Florida Energy">
@@ -37,9 +41,9 @@
 
   return t;
   }(document, "script", "twitter-wjs"));</script>
-  <script src="java.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Anton|Source+Serif+Pro" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="styles/new-styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Anton|Source+Serif+Pro" rel="stylesheet">
+  
 </head>
   
 <body>
@@ -49,7 +53,7 @@
       <img src="images/header.jpg" alt="FESC logo">
       <h1 id="logo-fesc">FESC</h1>
       <ul>
-        <li class="home"><a href="#">Home</a></li>
+        <li class="home"><a href="index.html">Home</a></li>
         <li class="facility"><a href="#">Energy Charts</a></li>
         <li class="education"><a href="education.html">Education</a></li>
         <li class="industry"><a href="industry.html">Energy Industry</a></li>
