--- a/chart.html
+++ b/chart.html
@@ -65,8 +65,24 @@
   <main>
     <h1>Below are charts for the total consumption of electricity, and production of renewable energy for Florida</h1>
   </main>
+<!--       Google charts added-->
     <div id="chart_div"></div>
     <div id="barchart_values"></div>
+  
+  <section>
+    <form name="email" onsubmit="address()">
+      <label>Please input your email.
+        <input type="text" name="eMail">
+      </label>
+        <input type="submit">
+    </form>
+    <a href="#"><h4>CONTACT</h4></a>
+    <a href="#"><h4>SITE MAP</h4></a>
+  </section>
+  
+  <div class="share">
+  <a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=Check%20out%20this%20page%20https%3A%2F%2Fgeorodent.github.io%2Fsocial-media%2F">Tweet</a> 
+  </div>
     
 </body>
   
