--- a/chart.html
+++ b/chart.html
@@ -9,7 +9,7 @@
   <script type="text/javascript">
       google.charts.load('current', {'packages':['corechart']});
   </script>
-  <script src="java.js"></script>
+  
   
   <meta name="viewport"
   content="width=device-width, initial-scale=1">
@@ -43,24 +43,15 @@
   }(document, "script", "twitter-wjs"));</script>
   <link rel="stylesheet" type="text/css" href="styles/new-styles.css">
   <link href="https://fonts.googleapis.com/css?family=Anton|Source+Serif+Pro" rel="stylesheet">
-  
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="components.js"></script>
 </head>
   
 <body>
   
-  <header>
-    <div class="flexcontainer">
-      <img src="images/header.jpg" alt="FESC logo">
-      <h1 id="logo-fesc">FESC</h1>
-      <ul>
-        <li class="home"><a href="index.html">Home</a></li>
-        <li class="facility"><a href="#">Energy Charts</a></li>
-        <li class="education"><a href="education.html">Education</a></li>
-        <li class="industry"><a href="industry.html">Energy Industry</a></li>
-      </ul>
-    </div>
-    <h4 class="florida">FLORIDA ENERGY SYSTEMS CONSORTIUM</h4>
-  </header> 
+  <div id="app">
+    <flex-container></flex-container> 
+  </div>
   
   <main>
     <h1>Below are charts for the total consumption of electricity, and production of renewable energy for Florida</h1>
@@ -83,7 +74,7 @@
   <div class="share">
   <a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=Check%20out%20this%20page%20https%3A%2F%2Fgeorodent.github.io%2Fsocial-media%2F">Tweet</a> 
   </div>
-    
+  <script src="java.js"></script>  
 </body>
   
 </html>
