Added components for footer

--- a/chart.html
+++ b/chart.html
@@ -60,6 +60,10 @@
     <div id="chart_div"></div>
     <div id="barchart_values"></div>
   
+  <div id="app1">
+    <sections></sections>
+  </div>
+<!--
   <section>
     <form name="email" onsubmit="address()">
       <label>Please input your email.
@@ -70,6 +74,7 @@
     <a href="#"><h4>CONTACT</h4></a>
     <a href="#"><h4>SITE MAP</h4></a>
   </section>
+-->
   
   <div class="share">
   <a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=Check%20out%20this%20page%20https%3A%2F%2Fgeorodent.github.io%2Fsocial-media%2F">Tweet</a> 
