--- a/industry.html
+++ b/industry.html
@@ -79,16 +79,9 @@
     </div>
   </aside>
   
-  <section>
-    <form name="email" onsubmit="address()">
-      <label>Please input your email.
-        <input type="text" name="eMail">
-      </label>
-        <input type="submit">
-    </form>
-    <a href="#"><h4>Contact</h4></a>
-    <a href="#"><h4>Site Map</h4></a>
-  </section>
+  <div id="app1">
+    <sections></sections>
+  </div>
   
   <div class="share">
    <a class="twitter-share-button"
