--- a/education.html
+++ b/education.html
@@ -42,6 +42,7 @@
 </head>
   
 <body>
+<!--  component for header-->
   <div id="app">
     <flex-container></flex-container> 
   </div>
@@ -79,17 +80,10 @@
         </div>
     </div>
   </aside>
-  
-  <section>
-    <form name="email" onsubmit="address()">
-      <label>Please input your email.
-        <input type="text" name="eMail">
-      </label>
-        <input type="submit">
-    </form>
-    <a href="#"><h4>Contact</h4></a>
-    <a href="#"><h4>Site Map</h4></a>
-  </section>
+<!--   component for footer -->
+  <div id="app1">
+    <sections></sections>
+  </div>
   
   <div class="share">
     <a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=Check%20out%20this%20page%20https%3A%2F%2Fgeorodent.github.io%2Fsocial-media%2F">
