--- a/index.html
+++ b/index.html
@@ -78,17 +78,10 @@ the Nation, and the World!</h1>
         </div>
     </div>
   </aside>
-  
-  <section>
-    <form name="email" onsubmit="address()">
-      <label>Please input your email.
-        <input type="text" name="eMail">
-      </label>
-        <input type="submit">
-    </form>
-    <a href="#"><h4>CONTACT</h4></a>
-    <a href="#"><h4>SITE MAP</h4></a>
-  </section>
+  <!--component for footer-->
+  <div id="app1">
+    <sections></sections>
+  </div>
   
   <div class="share">
     <a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=Check%20out%20this%20page%20https%3A%2F%2Fgeorodent.github.io%2Fsocial-media%2F">Tweet</a> 
