New API request for upper chart

--- a/chart.html
+++ b/chart.html
@@ -44,6 +44,7 @@
   <link rel="stylesheet" type="text/css" href="styles/new-styles.css">
   <link href="https://fonts.googleapis.com/css?family=Anton|Source+Serif+Pro" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="chart.js"></script>
   <script src="components.js"></script>
 </head>
   
@@ -57,8 +58,10 @@
     <h1>Below are charts for the total consumption of electricity, and production of renewable energy for Florida</h1>
   </main>
 <!--       Google charts added-->
-    <div id="chart_div"></div>
-    <div id="barchart_values"></div>
+  <div id="chart_div"></div>
+  <div id="barchart_values"></div>
+  <div id="chart_div2"></div>
+  <div id="response"></div>
   
   <div id="app1">
     <sections></sections>
@@ -79,7 +82,7 @@
   <div class="share">
   <a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=Check%20out%20this%20page%20https%3A%2F%2Fgeorodent.github.io%2Fsocial-media%2F">Tweet</a> 
   </div>
-  <script src="java.js"></script>  
+  <script src="script.js"></script>  
 </body>
   
 </html>
