--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ the Nation, and the World!</h1>
   <div class="share">
     <a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=Check%20out%20this%20page%20https%3A%2F%2Fgeorodent.github.io%2Fsocial-media%2F">Tweet</a> 
   </div> 
-  <script src="java.js"></script>
+  <script src="script.js"></script>
 </body>
   
 </html>
